frontend/builder/src/components/DeviceSelector.module.css
.container {
    display: flex;
    flex-direction: column;
    width: 226px;
    height: 144px;

    background-color: white;

    border: 1px solid rgba(0, 0, 0, 0.3);
    border-radius: 5px;

    position: absolute;
    right: 160px;
    top: 50px;
}

.container button {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 48px;
    width: 100%;
}

.container button span {
    margin-left: 22px;
    cursor: pointer;
}

.container button span:hover {
    color: #0693E3;
}

